--- a/kvt-projekat2024/src/app/components/facility/facility.component.css
+++ b/kvt-projekat2024/src/app/components/facility/facility.component.css
@@ -89,3 +89,34 @@ span {
 h3{
     color: #405D72;
 }
+
+.review-item {
+    background-color: #FFF8F3;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 15px;
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+.review-item p {
+    margin: 5px 0;
+    color: #405D72;
+    font-size: 16px;
+}
+
+.ng-template p {
+    color: #758694;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.loading-message {
+    font-size: 18px;
+    color: #758694;
+    margin-top: 30px;
+}
+
+.detail-container h2, .detail-container h3 {
+    margin-top: 0;
+}
