--- a/kvt-projekat2024/src/app/components/login/login.component.html
+++ b/kvt-projekat2024/src/app/components/login/login.component.html
@@ -35,7 +35,7 @@
     <button type="submit" class="btn" [disabled]="loginForm.invalid">Login</button>
   
     <div class="register-link">
-      <p>Don't have an account? <a href="/register">Register here</a></p>
+      <p>Don't have an account? <a href="/account-request">Ask for account here</a></p>
     </div>
     
   </form>
