--- a/kvt-projekat2024/src/app/components/update-user/update-user.component.html
+++ b/kvt-projekat2024/src/app/components/update-user/update-user.component.html
@@ -90,11 +90,11 @@
           name="birthday">
       </div>
   
-      <button type="submit" class="btn btn-primary">Update User</button>
+      <button type="submit" class="btn btn-primary">Update profile</button>
     </form>
 
-    <h3>User Reviews</h3>
-    <div *ngIf="reviews.length > 0; else noReviews">
+    <h3>Reviews</h3>
+    <div *ngIf="reviews && reviews.length > 0; else noReviews">
       <ul class="list-group">
         <li *ngFor="let review of reviews" class="list-group-item">
           <strong>Created At:</strong> {{ review.createdAt | date:'dd.MM.yyyy HH:mm' }}<br>
@@ -116,8 +116,8 @@
     </ng-template>
     
 
-<h3>User Visited Facilities</h3>
-    <div *ngIf="visitedFacilities.length > 0; else noFacilities">
+<h3>Visited facilities</h3>
+    <div *ngIf="visitedFacilities && visitedFacilities.length > 0; else noFacilities">
       <ul class="list-group">
         <li *ngFor="let facilityInfo of visitedFacilities" class="list-group-item">
           <strong>Facility Name:</strong> {{ facilityInfo.facility.name }}<br>
