--- a/kvt-projekat2024/src/app/components/facility/facility.component.css
+++ b/kvt-projekat2024/src/app/components/facility/facility.component.css
@@ -1,4 +1,3 @@
-/* Container for the entire facility details */
 .detail-container {
     padding: 20px;
     border: 1px solid #ddd;
@@ -10,18 +9,15 @@
     text-align: center;
 }
 
-/* Title for the facility details section */
 h2 {
     color: #405D72;
     margin-bottom: 20px;
 }
 
-/* Style for each detail section (e.g., Name, Description) */
 .detail {
     margin-bottom: 15px;
 }
 
-/* Label styling */
 label {
     display: block;
     font-weight: bold;
@@ -29,7 +25,6 @@ label {
     color: #405D72;
 }
 
-/* Styling for the values displayed after each label */
 span {
     display: block;
     font-size: 16px;
@@ -37,7 +32,6 @@ span {
     padding: 5px 0;
 }
 
-/* General button styling */
 .btn {
     padding: 12px 20px;
     border: none;
@@ -48,21 +42,19 @@ span {
     text-transform: uppercase;
     font-weight: bold;
     margin-top: 20px;
+    margin-left: 10px;
 }
 
-/* Primary button specific styling */
 .btn-primary {
     background-color: #758694;
     color: white;
     transition: background-color 0.3s ease;
 }
 
-/* Hover effect for primary button */
 .btn-primary:hover {
     background-color: #405D72;
 }
 
-/* Table for displaying working hours */
 .workday-table {
     width: 100%;
     margin-top: 20px;
