--- a/kvt-projekat2024/src/app/components/facility/facility.component.html
+++ b/kvt-projekat2024/src/app/components/facility/facility.component.html
@@ -39,7 +39,7 @@
     <button (click)="scheduleVisit(facility.id)" class="btn btn-primary">Schedule Visit</button>
     <button *ngIf="canReview" (click)="review(facility.id)" class="btn btn-primary">Review</button>
     
-    <div *ngIf="userType === 'MANAGER'">
+    <div *ngIf="userType === 'MANAGER' || userType === 'ADMIN'">
       <h3 class="reviews-heading">Reviews</h3>
       <div *ngIf="reviews && reviews.length > 0; else noReviews">
           <div *ngFor="let review of reviews" class="review-item">
