Manage objects and their managers

--- a/kvt-projekat2024/src/app/app.component.css
+++ b/kvt-projekat2024/src/app/app.component.css
@@ -7,8 +7,8 @@ header {
     background-color: #F7E7DC;
     padding: 10px 20px;
     display: flex;
-    justify-content: space-between; /* Razmak između elemenata na krajevima */
-    align-items: center; /* Vertikalno poravnavanje elemenata */
+    justify-content: space-between; 
+    align-items: center; 
 }
 
 header h1 {
