Fixed style issues

--- a/kvt-projekat2024/src/app/app.component.html
+++ b/kvt-projekat2024/src/app/app.component.html
@@ -8,7 +8,10 @@
 <body>
     <header>
         <nav-bar></nav-bar>
-        <h1>SITPASS</h1>
+        <h1>
+        <a [routerLink]="['/home-page']" class="facility-link">SITPASS</a>
+        </h1>
+
     </header>
     <main>
       <router-outlet></router-outlet>
