--- a/kvt-projekat2024/src/app/app.component.css
+++ b/kvt-projekat2024/src/app/app.component.css
@@ -11,9 +11,10 @@ header {
     align-items: center; 
 }
 
-header h1 {
+header h1  a{
     font-size: 24px;
     color: #405D72;
+    text-decoration: none;
 }
 
 footer {
@@ -23,6 +24,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    margin-top: 20px;
 }
 
 footer p {
@@ -30,4 +32,8 @@ footer p {
     color: #333;
 }
 
+  body {
+    display: flex;
+    flex-direction: column;
+  }
 
